service.yml
apiVersion: v1
kind: Service
metadata:
  name: myownservice
spec:
  type: NodePort
  selector:
    app: todo-application
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
